[front] Fix the collapse/expand menu on mobile/tablet

--- a/front/app/styles/components/_top-banner.scss
+++ b/front/app/styles/components/_top-banner.scss
@@ -9,6 +9,10 @@
   margin: 0;
 }
 
+.navbar {
+  background-color:transparent !important;
+}
+
 .btn.top-banner-rounded {
   border-radius: 160px;
 }
